refactor: extract Input Validation Service